# pyvene

./: ._init_log  .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  If the cost is between X and Y.ipynb  Makefile  README.md  The capital of Spain is.ipynb  analysis.ipynb  check_finished_experiments.ipynb  counterfacutal_datasets.py  experiments_pricing_tag.sh  experiments_pricing_tag_small_batch.sh  genindex.html  in_context_learning_benchmark.ipynb  index.html  localist_paradox.ipynb  make.bat  objects.inv  playground.ipynb  py-modindex.html  pyproject.toml  pyvene_101.ipynb  requirements.txt  run_alignment.ipynb  run_alignment.py  run_flan_t5_xxl.sh  run_llm_alignment-offline.py  run_llm_alignment.py  run_train.ipynb  run_train.py  run_transfer_evaluation.ipynb  run_unrolling_evaluation.ipynb  search.html  searchindex.js  setup.py  tokenizer_test.py  trainer.py  (+3 more)
.doctrees/: index.doctree
.github/: pull_request_template.md
_modules/: index.html
_sources/: index.rst
_static/: documentation_options.js
api/: core.html  pyvene.data_generators.causal_model.CausalModel.html  pyvene.data_generators.causal_model.html  pyvene.data_generators.causal_model.simple_example.html  pyvene.data_generators.html  pyvene.models.backpack_gpt2.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackGPT2BaseModelOutput.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackGPT2Config.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackGPT2LMHeadModel.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackGPT2LMHeadModelOutput.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackGPT2Model.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackGPT2PreTrainedModel.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackMLP.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackNoMixBlock.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackSenseNetwork.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.BackpackWeightNetwork.html  pyvene.models.backpack_gpt2.modelings_backpack_gpt2.html  pyvene.models.backpack_gpt2.modelings_intervenable_backpack_gpt2.create_backpack_gpt2.html  pyvene.models.backpack_gpt2.modelings_intervenable_backpack_gpt2.html  pyvene.models.basic_utils.GET_LOC.html  pyvene.models.basic_utils.closeness_to_permutation_loss.html  pyvene.models.basic_utils.count_parameters.html  pyvene.models.basic_utils.create_directory.html  pyvene.models.basic_utils.embed_to_distrib.html  pyvene.models.basic_utils.format_token.html  pyvene.models.basic_utils.get_batch_size.html  pyvene.models.basic_utils.get_list_depth.html  pyvene.models.basic_utils.get_type_from_string.html  pyvene.models.basic_utils.harmonic_sigmoid_boundary.html  pyvene.models.basic_utils.html  pyvene.models.basic_utils.random_permutation_matrix.html  pyvene.models.basic_utils.set_seed.html  pyvene.models.basic_utils.sigmoid_boundary.html  pyvene.models.basic_utils.top_vals.html  pyvene.models.blip.html  pyvene.models.blip.modelings_blip.BlipWrapper.html  pyvene.models.blip.modelings_blip.html  pyvene.models.blip.modelings_blip_itm.BlipITMWrapper.html  (+180 more)
archived/: llms_playground.ipynb  (+4 more)
(+1085 files in other folders)
