[project]
name = "pyvene"
version = "0.1.6"
description = "Use Activation Intervention to Interpret Causal Mechanism of Model"
readme = "README.md"
authors = [
    { name="Zhengxuan Wu", email="wuzhengx@stanford.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
license = { text = "Apache License 2.0" }
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.1",
    "tokenizers>=0.20.0",
    "datasets>=3.0.1",
    "protobuf>=3.20.0",
    "matplotlib>=3.7.4",
    "ipywidgets>=8.1.1",
    "plotnine>=0.12.4",
    "huggingface-hub>=0.25.1",
    "numpy>1.24.4",
    "fsspec>=2023.6.0",
    "accelerate>=0.34.2",
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
]

[project.urls]
Documentation = "https://stanfordnlp.github.io/pyvene"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Test", "Test*"]
python_functions = ["test_*"]
addopts = "-v"
